--- a/log in.css
+++ b/log in.css
@@ -8,7 +8,11 @@
 }
 .text-form {
 	margin: 100px 0;
-    padding: 0 120px !important;
+}
+.text-form>div {
+	max-width: 340px;
+    width: 100%;
+    margin: 0 auto;
 }
 .mybutton {
 	background: #e95490 !important;
